src/objects/Qualtrics_Preferences__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store the Preferences configured on the Qualtrics Settings page.</description>
    <fields>
        <fullName>Allow_From_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow From Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Subject_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Subject Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_From_Name__c</fullName>
        <label>Default From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Message_From_Type__c</fullName>
        <label>Default Message From Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Org_Wide_Email_Id__c</fullName>
        <label>Default Org Wide Email Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Reply_To_Email__c</fullName>
        <label>Default Reply-To Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Subject__c</fullName>
        <label>Default Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Qualtrics Preferences</label>
</CustomObject>